added getting car by drive unit
