# api/handler/v1/drive_unit.go
@@ -152,3 +152,31 @@ func (h *handlerV1) DeleteDriveUnit(c *gin.Context) {
 	}
 	c.JSON(http.StatusAccepted, response)
 }
+
+// Get Car By Drive_unit ...
+// @Summary Get Car By Drive_unit Id
+// @Description This API for getting car by drive_unit Id
+// @Tags drive_unit
+// @Accept json
+// @Produce json
+// @Param id path string true "Drive_Unit_Id"
+// @Success 200 {object} structs.Car
+// @Failure 400 {object} structs.StandardErrorModel
+// @Failure 500 {object} structs.StandardErrorModel
+// @Router /v1/drive/car/{id} [get]
+func (h *handlerV1) GetCarByDriveUnit(c *gin.Context) {
+	var jspbMarshal protojson.MarshalOptions
+	jspbMarshal.UseProtoNames = true
+
+	id := c.Param("id")
+
+	response, err := postgres.NewDriveUnitRepasitory(h.db).GetCarByDriveUnit(id)
+	if err != nil {
+		c.JSON(http.StatusInternalServerError, gin.H{
+			"error": err.Error(),
+		})
+		h.log.Error("failed while getting car by drive_unit", logger.Error(err))
+		return
+	}
+	c.JSON(http.StatusAccepted, response)
+}
